FILE(GLOB source_file CONFIGURE_DEPENDS ./*.cpp )
FILE(GLOB source_head_file CONFIGURE_DEPENDS ./*.h)
add_library(test ${source_file} ${source_head_file})
target_include_directories(test PUBLIC .)
target_link_libraries(test PRIVATE allocator algorithm seq_container ass_container function iterator utils)